src/app/generated-crawl/generated-crawl.component.css
body {
    margin: 0;
    background-color: black;
}

.star {
    position: absolute;
    width: 1px;
    height: 1px;
    background-color: white;
}

/* Set the animation, color, size and hide the text */
.intro {
    z-index: 9999;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    animation: intro 6s ease-out 1s;
    color: rgb(75, 213, 238);
    font-weight: 400;
    font-size: 300%;
    opacity: 0;
}

@keyframes intro {
    0% {
        opacity: 0;
    }

    20% {
        opacity: 1;
    }

    90% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

.logo {    
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    margin: auto;
    animation: logo 9s ease-out 1s;
    opacity: 0;
    color: black;
    text-shadow:
      -0.5px -0.5px 0 #FFE81F, /* Adjust the offset and color for the outline */
      0.5px -0.5px 0 #FFE81F,
      -0.5px 0.5px 0 #FFE81F,
      0.5px 0.5px 0 #FFE81F;
    font-family: StarJedi;
}

@keyframes logo {
    0% {
        width: 50%;        
        transform: scale(15);
        opacity: 1;
    }
    50% {
        opacity: 1;
        width: 50%;      
    }
    100% {
        opacity: 0;
        transform: scale(0.1);
        width: 50%;
    }
}

p {
    color: #FFE81F;
}

/* Set the font, lean the board, position it */
#board {
    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
    transform: perspective(300px) rotateX(25deg);
    transform-origin: 50% 100%;
    text-align: justify;
    position: absolute;
    margin-left: -9em;
    font-weight: bold;
    overflow: hidden;
    font-size: 350%;
    height: 50em;
    width: 18em;
    bottom: 0;
    left: 50%;
}

#board:after {
    position: absolute;
    content: ' ';
    bottom: 60%;
    left: 0;
    right: 0;
    top: 0;
}

/* Set the scrolling animation and position it */
#content { /* FIXME linear determines how long before the crawl text appears */
    animation: scroll 100s linear 16s; /* FIXME change this to affect scroll speed */
    position: absolute;
    top: 100%;
}

#title,
#subtitle {
    text-align: center;
}

@keyframes scroll { /* FIXME or change this to affect scroll speed */
    0% {
        top: 100%;
    }

    100% {
        top: -170%;
    }
}

